--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+:root {
+  --primary-text-color: #212121;
+  --title-accent-color: #2196f3;
+  --paragrapg-contacts-color: #757575;
+  --hero-accent-color: #ffffff;
+  --hero-background-color: #2f303a;
+  --work-section-background: #e5e5e5;
+  --team-section-background: #f5f4fa;
+}
+
 body {
   background-color: #ffffff;
 }
@@ -6,7 +16,7 @@ body {
 /* #757575 text paragraph and contacts color */
 /* #FFFFFF; hero accent and background of the page color*/
 /* #2F303A hero background color */
-/* #E5E5E5; Work sphere section color */
+/* #E5E5E5; Work-section background color */
 /* #F5F4FA; Our team section background color*/
 
 .list {
@@ -14,70 +24,70 @@ body {
 }
 /* brandname */
 .brandname {
-  color: #212121;
+  color: var(--primary-text-color);
 }
 .brandname-one {
-  color: #2196f3;
+  color: var(--title-accent-color);
 }
 /* site-nav */
 .site-nav .link {
-  color: #212121;
+  color: var(--primary-text-color);
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
-  color: #2196f3;
+  color: var(--title-accent-color);
 }
 /* Headings */
 .section-title {
-  color: #212121;
+  color: var(--primary-text-color);
 }
 /* paragraphs */
 .section-content {
-  color: #757575;
+  color: var(--paragrapg-contacts-color);
 }
 /* hero */
 .hero {
-  background-color: #2f303a;
-  color: #ffffff;
+  background-color: var(--hero-background-color);
+  color: var(--hero-accent-color);
 }
 .hero-button {
-  background-color: #2196f3;
-  color: #ffffff;
+  background-color: var(--title-accent-color);
+  color: var(--hero-accent-color);
 }
 /* section Чем мы занимаемся */
 .section {
-  background-color: #e5e5e5;
+  background-color: var(--work-section-background);
 }
 /* section Наша команда */
 .team-section {
-  background-color: #f5f4fa;
+  background-color: var(--team-section-background);
 }
 .team-item {
-  background-color: #ffffff;
+  background-color: var(--hero-accent-color);
 }
 /* contacts */
 .contacts-nav {
-  color: #757575;
+  color: var(--paragrapg-contacts-color);
 }
 .contacts-nav:hover,
 .contacts-nav:focus {
-  color: #2196f3;
+  color: var(--title-accent-color);
 }
 .contacts-link {
-  color: #ffffff;
+  color: var(--hero-accent-color);
   opacity: 60%;
 }
 .contacts-link:hover,
 .contacts-link:focus {
-  color: #2196f3;
+  color: var(--title-accent-color);
 }
 .contacts-geoposition {
-  color: #ffffff;
+  color: var(--hero-accent-color);
 }
 /* footer */
 .page-footer {
-  background-color: #2f303a;
+  background-color: var(--hero-background-color);
 }
 .brandname-two {
-  color: #ffffff;
+  color: var(--hero-accent-color);
 }
