--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
   --hero-background-color: #2f303a;
   --team-section-background: #f5f4fa;
   --general-margin-bottom: 94px;
-  --card-set-gap: 30px;
+  --card-set-gap: 15px;
   --card-second-gap: 15px;
   --common-margin-gap: 50px;
   --card-border: #eeeeee;
@@ -27,11 +27,16 @@ h6,
 p {
   margin: 0;
 }
-
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 /* Utilities*/
-.list {
+ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 /* hidden headings */
@@ -57,7 +62,7 @@ p {
 /* Container */
 
 .container {
-  width: 1170px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -84,25 +89,20 @@ p {
 /* header */
 .header {
   border-bottom: 1px solid #ececec;
-  width: 1600px;
-  margin-right: auto;
-  margin-left: auto;
 }
-.page-header {
+.header-container {
   display: flex;
   align-items: center;
 }
 
 /* navigation */
 .navigation {
-  display: flex;
-  justify-content: space-between;
+  margin-left: 93px;
 }
 
 /* site-nav */
 .site-nav {
   display: flex;
-  margin-left: 93px;
 }
 .site-nav .nav-item {
   margin-right: var(--common-margin-gap);
@@ -111,6 +111,9 @@ p {
   margin-right: 0;
 }
 .site-nav .link {
+  padding: 32px 0;
+  display: block;
+
   color: var(--primary-text-color);
   text-decoration: none;
   font-weight: 500;
@@ -123,65 +126,16 @@ p {
   color: var(--title-accent-color);
 }
 
-/* Headings */
-.section-title {
-  margin-bottom: 10px;
-  color: var(--primary-text-color);
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.section-heading {
-  margin-bottom: var(--common-margin-gap);
-  color: var(--primary-text-color);
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-/* paragraphs */
-.section-content {
-  margin-bottom: var(--general-margin-bottom);
-  color: var(--paragrapg-contacts-color);
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-/* features - Чем мы занимаемся */
-.feature-list {
-  display: flex;
-}
-.feature-list .feature-item + .feature-item {
-  margin-left: 30px;
-}
-
-/* photos */
-.photos {
-  margin-bottom: var(--general-margin-bottom);
-  display: flex;
-}
-.photos .photos-item + .photos-item {
-  margin-left: 30px;
-}
-
 /* hero */
 .hero {
   background-color: var(--hero-background-color);
   color: var(--hero-accent-color);
-  margin-bottom: var(--general-margin-bottom);
-  width: 1600px;
-  height: 600px;
+  padding: 200px 0;
 }
 .hero-title {
-  padding-top: 200px;
   margin-top: 0;
   margin-bottom: 40px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -214,14 +168,55 @@ p {
   background-color: var(--button-hover-hero);
 }
 
+/* Headings */
+.work-section {
+  padding-top: 0;
+}
+.section {
+  padding: var(--general-margin-bottom) 0;
+}
+.section-title {
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.section-heading {
+  margin-bottom: var(--common-margin-gap);
+  color: var(--primary-text-color);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+/* paragraphs */
+.section-content {
+  color: var(--paragrapg-contacts-color);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/* features - Чем мы занимаемся */
+.feature-list {
+  display: flex;
+}
+.feature-list .feature-item + .feature-item {
+  margin-left: 30px;
+}
+
 /* section Наша команда */
 .team {
   display: flex;
 }
 .team-section {
   background-color: var(--team-section-background);
-  padding-top: var(--general-margin-bottom);
-  padding-bottom: var(--general-margin-bottom);
 }
 .team-item {
   background-color: var(--hero-accent-color);
@@ -229,7 +224,6 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
-  height: 368px;
 }
 .team .team-item + .team-item {
   margin-left: 30px;
@@ -309,11 +303,11 @@ p {
 .button-row {
   display: flex;
   justify-content: center;
-  margin-top: var(--general-margin-bottom);
+
   margin-bottom: var(--common-margin-gap);
 }
 
-.button-row .buttons {
+.button-row .button {
   margin-right: 8px;
 }
 
@@ -332,25 +326,18 @@ p {
 } */
 
 .card-set .card-item:nth-last-child(-n + 6) {
-  margin-top: var(--card-set-gap);
 }
 .card-set .card-item:nth-child(3n) {
   margin-right: 0;
 }
 
-.card-set .card-item:last-child {
-  margin-bottom: var(--general-margin-bottom);
-}
 .card-set {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
-
-  margin: -15px -15px;
-  padding: 0;
+  margin: -15px;
 }
 .card-set .card-item {
-  margin: var(--card-second-gap) var(--card-second-gap);
+  margin: var(--card-set-gap);
 }
 
 .cards {
@@ -384,15 +371,11 @@ p {
 }
 /* footer */
 .page-footer {
-  background-color: var(--hero-background-color);
-  width: 1600px;
-}
-
-.footer {
   padding-top: 60px;
-  padding-bottom: 31px;
+  padding-bottom: 60px;
+  background-color: var(--hero-background-color);
 }
 
-.footer-item {
-  margin-bottom: 9px;
+.address {
+  margin-top: 20px;
 }
