Після правок(все працює)

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,8 @@ ul {
   color: var(--hero-accent-color);
   padding: 200px 0;
   max-width: 1600px;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   margin-right: auto;
   margin-left: auto;
@@ -267,7 +269,7 @@ ul {
 .social-list {
   display: flex;
   justify-content: center;
-  padding-top: 15px;
+  margin-top: 15px;
 }
 
 .social-item {
@@ -285,6 +287,7 @@ ul {
 }
 
 .social-link {
+  color: var(--patron-customers-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -298,16 +301,14 @@ ul {
 }
 
 .social-icon {
-  fill: var(--patron-customers-color);
+  fill: currentColor;
   width: 20px;
   height: 20px;
 }
 
 .social-link:hover,
-.social-link:focus,
-.social-icon:hover,
-.social-icon:focus {
-  fill: var(--hero-accent-color);
+.social-link:focus {
+  color: var(--hero-accent-color);
   background-color: var(--title-accent-color);
 }
 
@@ -385,7 +386,6 @@ ul {
 .contacts-nav:hover,
 .contacts-nav:focus {
   color: var(--title-accent-color);
-  fill: var(--title-accent-color);
 }
 .contacts-link {
   color: var(--hero-accent-color);
@@ -416,15 +416,10 @@ ul {
 
 .contacts-icon {
   margin-right: 10px;
-  fill: var(--paragrapg-contacts-color);
 }
 
 .contacts-icon-phone {
   margin-right: 10px;
-  fill: var(--paragrapg-contacts-color);
-}
-
-.social-icon {
 }
 
 /* Navigation-buttons */
@@ -445,6 +440,9 @@ ul {
 .buttons:focus {
   color: var(--hero-accent-color);
   background-color: var(--title-accent-color);
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button-row {
@@ -484,7 +482,7 @@ ul {
   margin: var(--card-set-gap);
 }
 
-.card-item:hover {
+.cards:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -492,6 +490,14 @@ ul {
 .cards {
   color: var(--primary-text-color);
   text-decoration: none;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  display: block;
+}
+
+.cards-heading {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -525,17 +531,13 @@ ul {
   background-color: var(--hero-background-color);
 }
 
-.footer-chunks {
-  display: flex;
-}
-
-.chunks-item:nth-child(2) {
-  padding-top: 15px;
-  padding-left: 70px;
-}
-
 .footer {
-  width: auto;
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-social {
+  margin-left: 70px;
 }
 
 .address {
