--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ ul {
   margin-left: 93px;
 }
 
-.niv-item {
+.nav-item {
   transition-property: fill, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -111,6 +111,7 @@ ul {
   fill: var(--title-accent-color);
   color: var(--title-accent-color);
 }
+
 /* site-nav */
 .site-nav {
   display: flex;
@@ -124,6 +125,7 @@ ul {
 .site-nav .link {
   padding: 32px 0;
   display: block;
+  position: relative;
 
   color: var(--primary-text-color);
   text-decoration: none;
@@ -140,6 +142,23 @@ ul {
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--title-accent-color);
+}
+
+.site-nav .link:active {
+  color: var(--title-accent-color);
+}
+
+.site-nav .link:active::after {
+  content: '';
+
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--title-accent-color);
+  border-radius: 2px;
 }
 
 /* hero */
@@ -231,6 +250,10 @@ ul {
   background-color: #fff;
 }
 
+.modal-button {
+  position: absolute;
+  right: 0;
+}
 /* Headings */
 .section {
   padding: var(--general-margin-bottom) 0;
@@ -238,6 +261,34 @@ ul {
 .work-section {
   padding-top: 0;
 }
+.work-thumb {
+  position: relative;
+  display: block;
+}
+
+.work-actions {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+  width: 100%;
+  height: 70px;
+
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(47, 48, 58, 0.8);
+
+  color: var(--hero-accent-color);
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
 .section-title {
   margin-bottom: 10px;
   color: var(--primary-text-color);
