--- a/css/styles.css
+++ b/css/styles.css
@@ -252,8 +252,20 @@ ul {
 
 .modal-button {
   position: absolute;
+  top: 0;
   right: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--hero-accent-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  font-size: 22px;
 }
+
 /* Headings */
 .section {
   padding: var(--general-margin-bottom) 0;
@@ -626,13 +638,15 @@ ul {
 }
 
 .cards {
+  display: block;
+  position: relative;
+
   color: var(--primary-text-color);
   text-decoration: none;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  display: block;
 }
 
 .cards-heading {
@@ -656,11 +670,18 @@ ul {
   max-width: 100%;
   height: auto;
 }
-
 .card-footer {
   padding: 20px 24px;
   border: 1px solid var(--card-border);
   border-top: transparent;
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0%;
+
+  width: 100%;
+  height: 100%;
 }
 /* footer */
 .page-footer {
