--- a/css/styles.css
+++ b/css/styles.css
@@ -635,12 +635,11 @@ ul {
 .cards:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  opacity: 1;
 }
 
 .cards {
   display: block;
-  position: relative;
-
   color: var(--primary-text-color);
   text-decoration: none;
   font-weight: 700;
@@ -665,24 +664,63 @@ ul {
   margin-top: 4px;
 }
 
-.card-thumb > img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+.card-thumb {
+  position: relative;
 }
+
+.card-block::before {
+  display: block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+}
+.cards:hover .card-block::before,
+.cards:focus .card-block::before {
+  transform: translateY(0);
+}
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 63px 24px;
+  display: flex;
+
+  width: 100%;
+  height: 100%;
+
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--hero-accent-color);
+
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+}
+
+.cards:hover .card-overlay {
+  transform: translateY(0);
+}
+
 .card-footer {
   padding: 20px 24px;
   border: 1px solid var(--card-border);
   border-top: transparent;
 }
 
-.card-overlay {
-  position: absolute;
-  top: 0%;
-
-  width: 100%;
-  height: 100%;
-}
 /* footer */
 .page-footer {
   padding-top: 60px;
